test/files/neg/t5882.check
t5882.scala:4: error: nested object is not allowed in value class
  case class Scope()
             ^
t5882.scala:5: error: nested object is not allowed in value class
  object Bar
         ^
two errors found
